<resources>
    <string name="app_name">Demo Testing</string>
    <string name="type_operand_one_hint">First</string>
    <string name="type_operant_two_hint">Second</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
</resources>
